# port-commander

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
adc/: adc_gui.c  adc_protocol.c  adc_protocol.h  serial_port.c
common/: vfd.h
compat/: compat.c  compat.h
dash/: apcommander.default.conf  config.c  config.h  main.c  menu.c  menu.h  render.c  render.h  spawn_pool.c  spawn_pool.h  tile.c  tile.h
dmm/: main.c
eload/: main.c
psu/: main.c  main_single.c  main_toolbar.c  main_toolbar_single.c  psu_protocol.c  psu_protocol.h  serial_port.h
src/: lsof_parse.c  lsof_parse.h  main.c  ps_query.c  ps_query.h  spawn_util.c  spawn_util.h  ui_render.c  ui_render.h
wifi/: main.c  nmcli_action.c  nmcli_action.h  nmcli_query.c  nmcli_query.h  nmcli_run.c  nmcli_run.h  qr_codec.c  qr_codec.h  ui_render.c  ui_render.h
